fix extra white space

--- a/src/acode.css
+++ b/src/acode.css
@@ -40,11 +40,14 @@
 html, body {
     width: 100%;
     height: 100%;
-    background-color: var(--bg);
-    opacity: 0;
     margin: 0;
     padding: 0;
     overflow-x: hidden;
+}
+
+body {
+    background-color: var(--bg);
+    opacity: 0;
 }
 
 main {
